ext0 doesnt work i believe?

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:seeed_xiao_esp32c3]
+;[env:esp32-c3-devkitm-1]
 platform = espressif32
 board = seeed_xiao_esp32c3
+;board = esp32-c3-devkitm-1
 framework = arduino
+monitor_speed = 115200
