--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:seeed_xiao_esp32c3]
-;[env:esp32-c3-devkitm-1]
+; espidf
+; [env:seeed_xiao_esp32c3]
+; board = seeed_xiao_esp32c3
+[env:esp32-c3-devkitm-1]
+board = esp32-c3-devkitm-1
 platform = espressif32
-board = seeed_xiao_esp32c3
-;board = esp32-c3-devkitm-1
 framework = arduino
 monitor_speed = 115200
