--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,10 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[env:seeed_xiao_esp32c3]
+board = seeed_xiao_esp32c3
 
-; espidf
-; [env:seeed_xiao_esp32c3]
-; board = seeed_xiao_esp32c3
-[env:esp32-c3-devkitm-1]
-board = esp32-c3-devkitm-1
+; [env:esp32-c3-devkitm-1]
+; board = esp32-c3-devkitm-1
+
 platform = espressif32
-framework = arduino
+; framework = arduino
+framework = espidf
 monitor_speed = 115200
