--- a/platformio.ini
+++ b/platformio.ini
@@ -5,6 +5,6 @@ board = seeed_xiao_esp32c3
 ; board = esp32-c3-devkitm-1
 
 platform = espressif32
-; framework = arduino
-framework = espidf
+framework = arduino
+; framework = espidf
 monitor_speed = 115200
